--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wlp-timeline",
   "version": "0.0.1",
-  "description": "One of several core WorldLine Project components that is an interactive zoomable timeline for fluidly exploring event data spanning orders of magnitude in timescales.",
+  "description": "One of several core D3-based WorldLine Project components that is an interactive zoomable timeline for fluidly exploring event data spanning orders of magnitude in timescales.",
   "author": "Jamie Williams",
   "license": "BSD-3-Clause",
   "keywords": [
