--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "bump": "npm --no-git-tag-version version patch",
     "bundle": "node -e 'process.stdout.write(\"var version = \\\"\" + require(\"./package.json\").version + \"\\\";export * from \\\"../index\\\"; export {version};\");' > build/bundle.js",
-    "rollup": "rollup -f umd -g d3-tip:d3_tip -n wlp_timeline -o build/wlp-timeline.js -- build/bundle.js",
+    "rollup": "rollup -f umd -g d3:d3,d3-tip:d3.tip -n wlp_timeline -o build/wlp-timeline.js -- build/bundle.js",
     "css": "cp src/css/timeline.css build/wlp-timeline.css",
     "pretest": "mkdir -p build && npm run bundle && npm run rollup && npm run css",
     "test": "faucet `find test -name '*-test.js'` && eslint index.js src/js",
