--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "jsnext:main": "index",
   "scripts": {
     "bump": "npm --no-git-tag-version version patch",
+    "bumptag": "npm version patch -m 'Tag %s'",
     "bundle": "node -e 'process.stdout.write(\"var version = \\\"\" + require(\"./package.json\").version + \"\\\";export * from \\\"../index\\\"; export {version};\");' > build/bundle.js",
     "rollup": "rollup -f umd -g d3:d3,d3-tip:d3.tip -n wlp_timeline -o build/wlp-timeline.js -- build/bundle.js",
     "css": "cp src/css/timeline.css build/wlp-timeline.css",
