closes #21 - added reset button to reset timeline span to show all data - Jamie

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bundle": "node -e 'process.stdout.write(\"var version = \\\"\" + require(\"./package.json\").version + \"\\\";export * from \\\"../index\\\"; export {version};\");' > build/bundle.js",
     "rollup": "rollup -f umd -g d3:d3,d3-tip:d3.tip -n wlp_timeline -o build/wlp-timeline.js -- build/bundle.js",
     "css": "cp src/css/timeline.css build/wlp-timeline.css",
-    "pretest": "mkdir -p build && npm run bundle && npm run rollup && npm run css",
+    "resources": "cp src/resources/* build/",
+    "pretest": "mkdir -p build && npm run bundle && npm run rollup && npm run css && npm run resources",
     "test": "faucet `find test -name '*-test.js'` && eslint index.js src/js",
     "uglify": "uglifyjs build/wlp-timeline.js -c -m -o build/wlp-timeline.min.js",
     "build": "rm -f build/wlp-timeline.zip && zip -j build/wlp-timeline.zip -- LICENSE README.md build/wlp-timeline.js build/wlp-timeline.css build/wlp-timeline.min.js",
