--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,19 @@
-ecmaFeatures:
-    modules: true
-
-env:
-    es6: true
-    browser: true
-
-extends:
-    "eslint:recommended"
-
-rules:
-    no-cond-assign: 0
+{
+	"parser": "babel-eslint",
+	"env": {
+		"browser": true,
+		"node": true,
+        "es6": true
+	},
+	"extends": "eslint:recommended",
+	"rules": {
+		"no-use-before-define": 1,
+		"camelcase": 1,
+		"new-cap": 1,
+		"one-var": 1,
+		"no-mixed-spaces-and-tabs": 0,
+		"no-cond-assign": 0,
+		"block-scoped-var": 0,
+		"semi": 1
+	}
+}
