--- a/package.json
+++ b/package.json
@@ -38,22 +38,17 @@
     "d3-zoom": "^1.1.4"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.3",
     "eslint": "^3.12.2",
-    "json2module": "0.0",
     "http-server": "^0.9.0",
-    "package-preamble": "0.0",
-    "rimraf": "2",
-    "rollup": "0.36",
-    "rollup-plugin-ascii": "0.0",
-    "rollup-plugin-commonjs": "^7.0.0",
-    "rollup-plugin-node-resolve": "2",
-    "rollup-watch": "^3.1.0",
-    "tape": "4",
-    "uglify-js": "2",
-    "uglifyjs": "^2.4.10",
+    "json2module": "0.0",
     "livereload": "^0.6.0",
     "npm-run-all": "^4.0.0",
-    "rollup-plugin-replace": "^1.1.1"
+    "rollup": "0.36",
+    "rollup-plugin-ascii": "0.0.3",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^1.1.1",
+    "tape": "^4.6.3"
   }
 }
