--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "d3-axis": "^1.0.6",
     "d3-scale": "^1.0.5",
     "d3-selection": "^1.0.6",
+    "d3-time": "^1.0.6",
     "d3-time-format": "^2.0.5",
     "d3-zoom": "^1.1.4"
   },
