--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "d3-selection": "^1.0.6",
     "d3-time": "^1.0.6",
     "d3-time-format": "^2.0.5",
+    "d3-tip": "^0.7.1",
     "d3-zoom": "^1.1.4"
   },
   "devDependencies": {
