--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "d3-array": "^1.2.0",
     "d3-axis": "^1.0.6",
+    "d3-format": "^1.2.0",
     "d3-request": "^1.0.5",
     "d3-scale": "^1.0.5",
     "d3-selection": "^1.0.6",
