--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "d3-request": "^1.0.5",
     "d3-scale": "^1.0.5",
     "d3-selection": "^1.0.6",
+    "d3-shape": "^1.2.0",
     "d3-time": "^1.0.6",
     "d3-time-format": "^2.0.5",
     "d3-tip": "^0.7.1",
